	(PR#6830 under Unix/Linux: it already worked under Windows.)
	Also 'R CMD check'.

    o	mosaicplot() stops cleanly if given a table containing missing values.

    o	install.packages() from a local CRAN was broken.

    o	bxp() fixed for e.g.,  boxplot(..., border=2:4)

    o	approx(list(x=rep(NaN,9), y=1:9), xout=NaN) does not seg.fault
	anymore (PR#6809).

    o	plot(1, pch=NA) does not give an error anymore and
	plot(1:2, pch=c("o",NA)) only prints one symbol	 (PR#6876).

    o	diffinv(matrix(3, 7,0)) now works.

    o	plot.ts(z) for multivariate 'z' now properly draws all 'nc' xlab`s
	when nc > 1 and obeys 'ann=FALSE' or 'axes=FALSE'.

    o	aggregate(.data.frame) failed if the answer would have had one
	row.

    o	recordPlot() and replayPlot() failed to duplicate the display
	list, so further plotting altered the saved or replayed object.

    o	Assignments of the form adf[i,j] <- value now accept a
	data-frame value as well as a list value.

    o	dir.create() sometimes erroneously continued to report a directory
	already existed after the first instance.  (PR#6892)

    o	arima.sim() allows a null model.

    o	which.min() & which.max()'s C code now PROTECT()'s its result.

    o	Building standalone nmath did not support some of the DEBUG options.

    o   mle() got confused if start value list was not in same order as
        arguments of likelihood function (reported by Ben Bolker)

    o	backsolve(r, x, k) now allows k < nrow(x) - as its documentation
	always claimed.

    o	update.packages("mgcv") and old.packages(*) now give a better error
	message; and installed.packages("mgcv") properly returns <empty>.

    o	stats:::as.dendrogram.hclust() is documented and no longer re-sorts
	the two children at each node.	This fixes as.dendrogram(hh) for
	the case where hh is a "reordered" hclust object.

	plot.dendrogram(x) now draws leaves 'x' more sensibly.

	reorder.dendrogram() now results in a dendrogram with correct